--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,10 @@
 	--color-gray-200: #d9d9d9;
 	--color-gray-100: #f2f2f2;
 	--color-danger: #e25858;
+
+	--font-inter: "Inter", "sans-serif"; 
 }
 
 * {
-	margin: 0;
-	padding: 0;
 	box-sizing: border-box;
 }
