--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 @theme {
 	--color-blue-dark: #1e6f9f;
+	--color-blue-dark-transparent: #1e6f9f33;
 	--color-blue: #4ea8de;
 	--color-purple-dark: #5e60ce;
 	--color-purple: #8284fa;
